k8s/overlays/dev/keycloak/patch.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: keycloak
          resources:
            requests:
              cpu: "200m"
              memory: "640Mi"
            limits:
              cpu: "500m"
              memory: "896Mi"
          readinessProbe:
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          livenessProbe:
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 9
