k8s/overlays/dev/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: loja
  annotations:
    # Redireciona HTTP para HTTPS no ingress de dev.
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev-auth.lojacloud.com.br
      secretName: loja-dev-tls
  rules:
    - host: dev-auth.lojacloud.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
